feat: add /songs route
