# song/routes.go
@@ -1,0 +1,43 @@
+package song
+
+import (
+	"bytes"
+	"encoding/json"
+	"io"
+	"net/http"
+
+	"github.com/GuillaumeMZ/alter-backend/database"
+	"github.com/GuillaumeMZ/alter-backend/surrealhttp"
+)
+
+func FindByFilter(responseWriter http.ResponseWriter, request *http.Request) {
+	body, err := io.ReadAll(request.Body)
+	if err != nil {
+		responseWriter.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	var filter SongFilter
+	if err := json.Unmarshal(body, &filter); err != nil {
+		responseWriter.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	sqlQuery := "SELECT id, album, artist, name FROM songs WHERE album CONTAINS $filter OR artist CONTAINS $filter OR name CONTAINS $filter"
+	queryResult, err := surrealhttp.RunSqlQuery[Song](database.Handle, sqlQuery, []surrealhttp.QueryParameter{{Key: "filter", Value: filter.Filter}})
+	if err != nil {
+		responseWriter.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	songs := queryResult[0].Result //there is always at least one result
+	var encodedSongs bytes.Buffer
+	err = json.NewEncoder(&encodedSongs).Encode(songs)
+	if err != nil {
+		responseWriter.WriteHeader(http.StatusInternalServerError)
+		return
+	}
+
+	responseWriter.WriteHeader(http.StatusOK)
+	responseWriter.Write(encodedSongs.Bytes())
+}
